@@ -1631,6 +1631,10 @@
 #define USE_PLATFORM_SYSTEM_FALLBACK_LIST 1
 #endif
 
+#if PLATFORM(MAC) && __MAC_OS_X_VERSION_MAX_ALLOWED >= 101500
+#define HAVE_AX_CLIENT_TYPE 1
+#endif
+
 #if (PLATFORM(MAC) && __MAC_OS_X_VERSION_MIN_REQUIRED >= 101500) || (PLATFORM(IOS) && __IPHONE_OS_VERSION_MIN_REQUIRED >= 130000) || PLATFORM(WATCHOS) || PLATFORM(APPLETV)
 #define HAVE_DESIGN_SYSTEM_UI_FONTS 1
 #endif
