@@ -1,3 +1,9 @@
+2019-10-16  Wenson Hsieh  <wenson_hsieh@apple.com>
+
+        Unreviewed, fix the internal macOS 10.13 and 10.14 builds after r251171
+
+        * Platform/spi/mac/ApplicationServicesSPI.h: Guard SPI declarations that use AXClientType with HAVE(AX_CLIENT_TYPE).
+
 2019-10-15  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         [GTK][WPE] Add user messages API
